--- a/HighlightDX/SimpleWrapper/SimpleWrapper.vcxproj.filters
+++ b/HighlightDX/SimpleWrapper/SimpleWrapper.vcxproj.filters
@@ -62,5 +62,19 @@
     <ClInclude Include="src\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\D3D11\Quad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\D3D11\Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="src\Asset\InnerCursor.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="src\Asset\OuterCursor.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
